tests/baselines/reference/iterableArrayPattern20.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern20.ts(16,17): error TS2501: A rest element cannot contain a binding pattern.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern20.ts (1 errors) ====
    class Bar { x }
    class Foo extends Bar { y }
    class FooArrayIterator {
        next() {
            return {
                value: [new Foo],
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    function fun(...[[a = new Foo], b = [new Foo]]: Bar[][]) { }
                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2501: A rest element cannot contain a binding pattern.
    fun(...new FooArrayIterator);